# analytics-manager

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
analytics_manager/: main.py
src/analytics-manager/: __init__.py  main.py
